--- a/.github/workflows/collect.yaml
+++ b/.github/workflows/collect.yaml
@@ -2,7 +2,7 @@ name: Collect
 on:
   # executed once a week on Sundays at 00:00
   schedule:
-    - cron: "17 0 * * *"
+    - cron: "17 0 1-28/7 * *"
   workflow_dispatch:
 
 env:
